--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -336,42 +336,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tDBqCWkfjVjY",
-        "outputId": "c99496c8-ffc8-4d4d-f007-813dc7f748ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        }
+        "id": "tDBqCWkfjVjY"
       },
       "source": [
-        "from sklearn.svm import SVR\n",
-        "regression = SVR(kernel='rbf', C=1.0, epsilon= 0.2)\n",
-        "regression.fit(x_train,y_train)"
+        "from sklearn.preprocessing import PolynomialFeatures\n",
+        "poly_reg = PolynomialFeatures(degree = 2)\n",
+        "x_poly = poly_reg.fit_transform(x_train)"
       ],
-      "execution_count": 213,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='scale',\n",
-              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 213
-        }
-      ]
+      "execution_count": 225,
+      "outputs": []
     },
     {
       "cell_type": "code",
