--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 220,
+      "execution_count": 239,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "396449ba-3f1e-45ed-b295-e830a86ad306",
+        "outputId": "edc92765-f496-4939-856b-df23aea0067a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 221,
+      "execution_count": 240,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 222,
+      "execution_count": 241,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 223,
+      "execution_count": 243,
       "outputs": []
     },
     {
@@ -215,11 +215,11 @@
         "id": "xZq1KN4y3NGh"
       },
       "source": [
-        "from sklearn.preprocessing import StandardScaler\n",
+        "'''from sklearn.preprocessing import StandardScaler\n",
         "sc_x = StandardScaler()\n",
         "sc_y = StandardScaler()\n",
         "x_train= sc_x.fit_transform(x_train)\n",
-        "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
+        "y_train= sc_y.fit_transform(y_train.reshape(-1,1))'''"
       ],
       "execution_count": 224,
       "outputs": []
@@ -230,7 +230,7 @@
         "id": "t5V6r84rgH1Q"
       },
       "source": [
-        "len(x_train[:,0])"
+        "'''len(x_train[:,0])"
       ],
       "execution_count": null,
       "outputs": []
@@ -241,7 +241,7 @@
         "id": "BKP7Xb2ap7Gf"
       },
       "source": [
-        "pd.DataFrame(x_train)"
+        "'''pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -343,7 +343,7 @@
         "poly_reg = PolynomialFeatures(degree = 2)\n",
         "x_poly = poly_reg.fit_transform(x_train)"
       ],
-      "execution_count": 225,
+      "execution_count": 245,
       "outputs": []
     },
     {
@@ -352,11 +352,11 @@
         "id": "cQ8W4hTf8Cjm"
       },
       "source": [
-        "x_valor=sc_x.inverse_transform(x_train)\n",
+        "'''x_valor=sc_x.inverse_transform(x_train)\n",
         "y_valor= sc_y.inverse_transform(y_train)\n",
-        "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
+        "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))'''"
       ],
-      "execution_count": 214,
+      "execution_count": 226,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         "id": "dwwzroSL4J3G"
       },
       "source": [
-        "pd.DataFrame(x_valor)"
+        "pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -373,13 +373,116 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FPVQ5suz5izx"
+        "id": "FPVQ5suz5izx",
+        "outputId": "7293d7c0-37f6-436f-a244-98e7f4c5c5cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        }
       },
       "source": [
-        "pd.DataFrame(y_valor)"
+        "pd.DataFrame(y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 238,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-0.677081</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.621981</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0.646470</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.239205</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-0.658714</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>60</th>\n",
+              "      <td>-0.677081</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61</th>\n",
+              "      <td>-0.594430</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>62</th>\n",
+              "      <td>1.805519</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>63</th>\n",
+              "      <td>2.142247</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>64</th>\n",
+              "      <td>-0.573002</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>65 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           0\n",
+              "0  -0.677081\n",
+              "1  -0.621981\n",
+              "2  -0.646470\n",
+              "3   1.239205\n",
+              "4  -0.658714\n",
+              "..       ...\n",
+              "60 -0.677081\n",
+              "61 -0.594430\n",
+              "62  1.805519\n",
+              "63  2.142247\n",
+              "64 -0.573002\n",
+              "\n",
+              "[65 rows x 1 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 238
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -387,7 +490,7 @@
         "id": "lTJxLvrQ3CQo"
       },
       "source": [
-        "pd.DataFrame(y_predic_valor)"
+        "pd.DataFrame(regression.predict(x_train))"
       ],
       "execution_count": null,
       "outputs": []
