--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 239,
+      "execution_count": 253,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "edc92765-f496-4939-856b-df23aea0067a",
+        "outputId": "ed1f451b-d0de-43fd-9de5-2dfa3f801274",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 240,
+      "execution_count": 254,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,29 +97,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 241,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4zakNkcb222f"
-      },
-      "source": [
-        "x"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SjBMsScDnRjl"
-      },
-      "source": [
-        "y"
-      ],
-      "execution_count": null,
+      "execution_count": 255,
       "outputs": []
     },
     {
@@ -197,7 +175,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 243,
+      "execution_count": 256,
       "outputs": []
     },
     {
@@ -336,15 +314,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tDBqCWkfjVjY"
+        "id": "tDBqCWkfjVjY",
+        "outputId": "b5f89693-b434-4236-8ba7-749f1b584668",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from sklearn.preprocessing import PolynomialFeatures\n",
         "poly_reg = PolynomialFeatures(degree = 2)\n",
-        "x_poly = poly_reg.fit_transform(x_train)"
+        "x_poly = poly_reg.fit_transform(x_train)\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "lineal_poly = LinearRegression()\n",
+        "lineal_poly.fit(x_poly,y_train)"
       ],
-      "execution_count": 245,
-      "outputs": []
+      "execution_count": 257,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 257
+        }
+      ]
     },
     {
       "cell_type": "code",
