--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -365,7 +365,7 @@
         "id": "dwwzroSL4J3G"
       },
       "source": [
-        "pd.DataFrame(x_train)"
+        "pd.DataFrame(lineal_poly.predict(x_poly))"
       ],
       "execution_count": null,
       "outputs": []
@@ -373,124 +373,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FPVQ5suz5izx",
-        "outputId": "7293d7c0-37f6-436f-a244-98e7f4c5c5cc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "FPVQ5suz5izx"
       },
       "source": [
         "pd.DataFrame(y_train)"
-      ],
-      "execution_count": 238,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>-0.677081</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>-0.621981</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>-0.646470</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1.239205</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>-0.658714</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>60</th>\n",
-              "      <td>-0.677081</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>61</th>\n",
-              "      <td>-0.594430</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>62</th>\n",
-              "      <td>1.805519</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>63</th>\n",
-              "      <td>2.142247</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>64</th>\n",
-              "      <td>-0.573002</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>65 rows × 1 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "           0\n",
-              "0  -0.677081\n",
-              "1  -0.621981\n",
-              "2  -0.646470\n",
-              "3   1.239205\n",
-              "4  -0.658714\n",
-              "..       ...\n",
-              "60 -0.677081\n",
-              "61 -0.594430\n",
-              "62  1.805519\n",
-              "63  2.142247\n",
-              "64 -0.573002\n",
-              "\n",
-              "[65 rows x 1 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 238
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lTJxLvrQ3CQo"
-      },
-      "source": [
-        "pd.DataFrame(regression.predict(x_train))"
       ],
       "execution_count": null,
       "outputs": []
